--- a/index.html
+++ b/index.html
@@ -9,15 +9,106 @@
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.js"></script>
+  <script type="text/javascript"
+          src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
-  
 
 </head>
 <body>
 
 
-<script src=""></script>
+<div class="ui borderless topmenu container menu">
+  <div class="ui image">
+    <img src="http://murphyshawaii.com/media/2014/04/murphyshawaii.png">
+  </div>
+
+  <div class="right item">Home</div>
+
+  <div class="ui dropdown fitted item">
+    <div class="text">
+      About Us
+      <i class="dropdown icon"></i>
+    </div>
+    <div class="menu">
+      <div class="item">Your cart is currently empty</div>
+    </div>
+  </div>
+
+  <div class="item">St Patrick's Day</div>
+
+  <div class="ui dropdown fitted item">
+    <div class="text">
+      Menu
+      <i class="dropdown icon"></i>
+    </div>
+    <div class="menu">
+      <div class="item">Your cart is currently empty</div>
+    </div>
+  </div>
+
+  <div class="item">Bar</div>
+
+  <div class="item">
+    <i class="search icon"></i>
+  </div>
+
+
+</div>
+
+
+<div class="ui grid two column middle aligned centered middle-section">
+
+  <div class="row">
+
+    <div class=" column">
+      <img src="http://murphyshawaii.com/media/2014/04/murphyshawaiilogo.png">
+    </div>
+
+    <div class="column" style="text-align:left; color:white;">
+      <p>
+        A traditional downtown saloon and eatery located in the Honolulu Financial District, just one block off the
+        waterfront, Murphy's has been a haven for mariners, businessman and locals since 1891.
+      </p>
+    </div>
+
+  </div>
+
+</div>
+
+
+<div class="footer">
+  <div class="ui three column grid container">
+    <div class=" column">
+      Lunch
+      <hr/>
+      <div class="ui inverted list">
+        <div class="inverted item">Monday-Friday: 11:00am-2:30pm</div>
+        <div class="item">Saturday-Sunday: Not open for lunch</div>
+      </div>
+    </div>
+
+    <div class="column">
+      Bar
+      <hr/>
+      <div class="ui list">
+        <div class="item">Monday-Friday: from 11:00pm</div>
+        <div class="item">Saturday-Sunday from 4:00pm</div>
+      </div>
+    </div>
+
+    <div class="column">
+      Dinner
+      <hr/>
+      <div class="ui list">
+        <div class="item">Monday-Saturday:5:30pm-10pm</div>
+        <div class="item"> Sunday:5:00pm-9:00pm</div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<script src="murphys.js"></script>
 </body>
 </html>
